<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="missing_rename_error">You need to rename this</string>
    <string name="add_folder_name_error">You need to add a folder name</string>
    <string name="files_label">Files</string>
    <string name="downloads_label">Downloads</string>
    <string name="app_label">@string/files_label</string>
    <string name="launcher_label">@string/files_label</string>
    <string name="title_open">Open from</string>
    <string name="title_save">Save to</string>
    <string name="menu_create_dir">New folder</string>
    <string name="menu_grid">Grid view</string>
    <string name="menu_list">List view</string>
    <string name="menu_search">Search</string>
    <string name="search" >"Search..."</string>
    <string name="menu_settings">Storage settings</string>
    <string name="menu_open">Open</string>
    <string name="menu_open_with">Open with</string>
    <string name="menu_open_in_new_window">Open in new window</string>
    <string name="menu_save">Save</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_deselect_all">Deselect all</string>
    <string name="menu_select">Select</string>
    <string name="menu_sort">Sort by...</string>
    <string name="menu_copy">Copy to\u2026</string>
    <string name="menu_move">Move to\u2026</string>
    <string name="menu_compress">Compress</string>
    <string name="menu_extract">Extract to\u2026</string>
    <string name="menu_rename">Rename</string>
    <string name="rename_hint" >"input new name"</string>
    <string name="menu_inspect">Get info</string>
    <string name="menu_show_hidden_files">Show hidden files</string>
    <string name="menu_hide_hidden_files">Don\u2019t show hidden files</string>
    <string name="menu_view_in_owner">View in <xliff:g id="source" example="Google Drive">%1$s</xliff:g></string>
    <string name="menu_new_window">New window</string>
    <string name="menu_cut_to_clipboard">Cut</string>
    <string name="menu_copy_to_clipboard">Copy</string>
    <string name="menu_paste_from_clipboard">Paste</string>
    <string name="menu_paste_into_folder">Paste into folder</string>
    <string name="menu_advanced_show">Show internal storage</string>
    <string name="menu_advanced_hide">Hide internal storage</string>
    <string name="button_select">Select</string>
    <string name="button_copy">Copy</string>
    <string name="button_compress">Compress</string>
    <string name="button_extract">Extract</string>
    <string name="button_move">Move</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_retry">Try Again</string>
    <string name="button_clear">Clear</string>
    <string name="button_show_provider">Show in provider</string>
    <string name="button_back">Back</string>
    <string name="not_sorted">Not sorted</string>
    <string name="sort_dimension_name">Name</string>
    <string name="sort_dimension_summary">Summary</string>
    <string name="sort_dimension_file_type">Type</string>
    <string name="sort_dimension_size">Size</string>
    <string name="sort_dimension_date">Modified</string>
    <string name="sort_dimension_name_ascending">File name (A to Z)</string>
    <string name="sort_dimension_file_type_ascending">Type (A to Z)</string>
    <string name="sort_dimension_size_ascending">Size (smallest first)</string>
    <string name="sort_dimension_date_ascending">Modified (oldest first)</string>
    <string name="sort_dimension_name_descending">File name (Z to A)</string>
    <string name="sort_dimension_file_type_descending">Type (Z to A)</string>
    <string name="sort_dimension_size_descending">Size (largest first)</string>
    <string name="sort_dimension_date_descending">Modified (newest first)</string>
    <string name="sort_dimension_dialog_title">Sort by</string>
    <string name="sort_dimension_button_title">Sorted by <xliff:g id="label" example="File name (A to Z)">%s</xliff:g></string>
    <string name="directory_items">Number of items</string>
    <string name="sort_direction_ascending">Ascending</string>
    <string name="sort_direction_descending">Descending</string>
    <string name="open_external_app">Open <xliff:g id="appName" example="Drive">%1$s</xliff:g></string>
    <string name="drawer_open">Show roots</string>
    <string name="drawer_close">Hide roots</string>
    <string name="save_error">Failed to save document</string>
    <string name="create_error">Failed to create folder</string>
    <string name="query_error">Can\u2019t load content at the moment</string>
    <string name="quiet_mode_error_title">Work apps are paused</string>
    <string name="quiet_mode_button">Turn on work apps</string>
    <string name="profile_quiet_mode_error_title">
        <xliff:g id="profile" example="Work">%1$s</xliff:g> apps are paused
    </string>
    <string name="profile_quiet_mode_button">
        Turn on <xliff:g id="profile" example="work">%1$s</xliff:g> apps
    </string>
    <string name="cant_select_work_files_error_title">Can\u2019t select work files</string>
    <string name="cant_select_work_files_error_message">Your IT admin doesn\u2019t allow you to
        access work files from a personal app
    </string>
    <string name="cant_select_personal_files_error_title">Can\u2019t select personal files</string>
    <string name="cant_select_personal_files_error_message">Your IT admin doesn\u2019t allow you to
        access personal files from a work app
    </string>
    <string name="cant_select_cross_profile_files_error_title">Can\u2019t select
        <xliff:g id="profile" example="work">%1$s</xliff:g> files
    </string>
    <string name="cant_select_cross_profile_files_error_message">Your IT admin doesn\u2019t allow
        you to access <xliff:g id="profile" example="work">%1$s</xliff:g> files from a
        <xliff:g id="profile" example="personal">%2$s</xliff:g> app
    </string>
    <string name="cant_save_to_work_error_title">Can\u2019t save to work profile</string>
    <string name="cant_save_to_work_error_message">Your IT admin doesn\u2019t allow you to save
        personal files to your work profile
    </string>
    <string name="cant_save_to_personal_error_title">Can\u2019t save to personal profile</string>
    <string name="cant_save_to_personal_error_message">Your IT admin doesn\u2019t allow you to save
        work files to your personal profile
    </string>
    <string name="cant_save_to_cross_profile_error_title">Can\u2019t save to
        <xliff:g id="profile" example="work">%1$s</xliff:g> profile
    </string>
    <string name="cant_save_to_cross_profile_error_message">Your IT admin doesn\u2019t allow you to
        save <xliff:g id="profile" example="personal">%1$s</xliff:g> files to your
        <xliff:g id="profile" example="work">%2$s</xliff:g> profile
    </string>
    <string name="cross_profile_action_not_allowed_title">This action isn\u2019t allowed</string>
    <string name="cross_profile_action_not_allowed_message">To learn more, contact your IT admin</string>
    <string name="root_recent">Recent</string>
    <string name="root_available_bytes"><xliff:g id="size" example="3GB">%1$s</xliff:g> free</string>
    <string name="root_type_service">Storage services</string>
    <string name="root_type_shortcut">Shortcuts</string>
    <string name="root_type_device">Devices</string>
    <string name="root_type_apps">More apps</string>
    <string name="empty">No items</string>
    <string name="no_results">No matches in %1$s</string>
    <string name="toast_no_application">Can\u2019t open file</string>
    <string name="toast_view_in_archives_unsupported">Cannot open files in archives</string>
    <string name="toast_failed_delete">Unable to delete some documents</string>
    <string name="toast_share_over_limit">Can\u2019t share more than <xliff:g id="count" example="1">%1$d</xliff:g> files</string>
    <string name="toast_action_not_allowed">Action not allowed</string>
    <string name="share_via">Share via</string>
    <string name="copy_notification_title">Copying files</string>
    <string name="compress_notification_title">Compressing files</string>
    <string name="extract_notification_title">Extracting files</string>
    <string name="move_notification_title">Moving files</string>
    <string name="delete_notification_title">Deleting files</string>
    <string name="copy_remaining"><xliff:g id="duration" example="3 minutes">%s</xliff:g> left</string>
    <plurals name="copy_begin">
        <item quantity="one">Copying <xliff:g id="count" example="1">%1$d</xliff:g> item.</item>
        <item quantity="other">Copying <xliff:g id="count" example="3">%1$d</xliff:g> items.</item>
    </plurals>
    <plurals name="compress_begin">
        <item quantity="one">Compressing <xliff:g id="count" example="1">%1$d</xliff:g> file.</item>
        <item quantity="other">Compressing <xliff:g id="count" example="3">%1$d</xliff:g> files.</item>
    </plurals>
    <plurals name="extract_begin">
        <item quantity="one">Extracting <xliff:g id="count" example="1">%1$d</xliff:g> file.</item>
        <item quantity="other">Extracting <xliff:g id="count" example="3">%1$d</xliff:g> files.</item>
    </plurals>
    <plurals name="move_begin">
        <item quantity="one">Moving <xliff:g id="count" example="1">%1$d</xliff:g> item.</item>
        <item quantity="other">Moving <xliff:g id="count" example="3">%1$d</xliff:g> items.</item>
    </plurals>
    <plurals name="deleting">
        <item quantity="one">Deleting <xliff:g id="count" example="1">%1$d</xliff:g> item.</item>
        <item quantity="other">Deleting <xliff:g id="count" example="3">%1$d</xliff:g> items.</item>
    </plurals>
    <string name="undo">Undo</string>
    <string name="copy_preparing">Preparing...</string>
    <string name="compress_preparing">Preparing...</string>
    <string name="extract_preparing">Preparing...</string>
    <string name="move_preparing">Preparing...</string>
    <string name="delete_preparing">Preparing...</string>
    <string name="delete_progress"><xliff:g id="count" example="3">%1$d</xliff:g> / <xliff:g id="totalCount" example="5">%2$d</xliff:g></string>
    <plurals name="copy_error_notification_title">
        <item quantity="one">Couldn\u2019t copy <xliff:g id="count" example="1">%1$d</xliff:g> item</item>
        <item quantity="other">Couldn\u2019t copy <xliff:g id="count" example="2">%1$d</xliff:g> items</item>
    </plurals>
    <plurals name="compress_error_notification_title">
        <item quantity="one">Couldn\u2019t compress <xliff:g id="count" example="1">%1$d</xliff:g> file</item>
        <item quantity="other">Couldn\u2019t compress <xliff:g id="count" example="2">%1$d</xliff:g> files</item>
    </plurals>
    <plurals name="move_error_notification_title">
        <item quantity="one">Couldn\u2019t move <xliff:g id="count" example="1">%1$d</xliff:g> item</item>
        <item quantity="other">Couldn\u2019t move <xliff:g id="count" example="2">%1$d</xliff:g> items</item>
    </plurals>
    <plurals name="delete_error_notification_title">
        <item quantity="one">Couldn\u2019t delete <xliff:g id="count" example="1">%1$d</xliff:g> item</item>
        <item quantity="other">Couldn\u2019t delete <xliff:g id="count" example="2">%1$d</xliff:g> items</item>
    </plurals>
    <string name="notification_touch_for_details">Tap to view details</string>
    <string name="close">Close</string>
    <string name="fde_ok" >"OK"</string>
    <string name="fde_cancel" >"Cancel"</string>
    <string name="fde_once" >"Once"</string>
    <string name="fde_always" >"Always"</string>
    <string name="fde_other_app" >"Other apps"</string>
    <string name="fde_linux_open" >"Linux App Launcher "</string>
    <string name="fde_xserver_open" >"X11 server"</string>
    <string name="fde_vnc_open" >"VNC server"</string>
</resources>